unpackaged/main/default/objects/ffct__MetadataMigration__c/ffct__MetadataMigration__c.object-meta.xml
<CustomObject>
    <customHelpPage>ffct__migrationsetonlinehelp</customHelpPage>
    <description>The metadata that needs to be migrated to another organization</description>
    <label>Metadata Migration</label>
    <nameField>
        <label>Metadata Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Metadata Migration</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>