unpackaged/main/default/objects/ffct__MetadataMigration__c/fields/ffct__APIName__c.field-meta.xml
<CustomField>
    <fullName>ffct__APIName__c</fullName>
    <description>Holds the API name of the metadata to be migrated</description>
    <label>API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>