unpackaged/main/default/objects/ffct__MetadataMigration__c/fields/ffct__NamespacePrefix__c.field-meta.xml
<CustomField>
    <fullName>ffct__NamespacePrefix__c</fullName>
    <description>Holds the namespace prefix of the metadata to be migrated</description>
    <label>Namespace Prefix</label>
    <length>40</length>
    <type>Text</type>
</CustomField>