unpackaged/main/default/objects/ffct__MetadataMigration__c/fields/ffct__UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>ffct__UniqueKey__c</fullName>
    <description>Holds the unique value of the metadata record</description>
    <externalId>true</externalId>
    <label>Unique Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>